--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -86,7 +86,7 @@ header {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 2em 3em 2em 9em;
+	padding: 2em 3em 2em 5em;
 	transition: background 250ms ease-in;
 	background: var(--background);
 	color: var(--text);
@@ -94,11 +94,17 @@ header {
 .nav__list {
 	list-style: none;
 	margin: 0;
-	padding: 0;
+	padding: 0em 0em 0em 12em;
 	display: flex;
 	align-items: center;
 }
-
+.nav__list_simulation {
+	list-style: none;
+	margin: 0;
+	padding: 0em 0em 10em 0em;
+	display: flex;
+	align-items: center;
+}
 .nav__link {
 	--spacing: 1em;
 	text-decoration: none;
