--- a/views/homepage.html
+++ b/views/homepage.html
@@ -37,10 +37,7 @@
             <nav class="account">
                 <ul class="nav__list">
                     <li class="nav__list-item">
-                        <a class="nav__link nav__link--btn" href="login">Login</a>
-                    </li>
-                    <li class="nav__list-item">
-                        <a class="nav__link nav__link--btn nav__link--btn--highlight" href="register">Join</a>
+                        <a class="nav__link nav__link--btn nav__link--btn--highlight" href="BackToLogin">Logout</a>
                     </li>
                 </ul>
             </nav>
