--- a/views/simulator.html
+++ b/views/simulator.html
@@ -30,12 +30,13 @@
     <script src="../scripts/outbreak/graphCheck.js"></script><!--including the GraphCheck class for the outbreak-->
     <script src="../scripts/outbreak/diseaseOutbreak.js"></script>
   </head>
+
   <header>
     <a href="homepage" class="site-logo" aria-label="homepage">Project Outbreak</a>
   </header>
+
   <body>
     <div id="grey-overlay"></div>
-    </nav>
 
     <div id="banner-simulation">
       <div id="title">The Simulator</div>
@@ -63,7 +64,7 @@
 
         <div id="popups">
           <div id="diseaseName-popup" class="popup-style">
-            <b>Name: </b>Enter a name for the disease.
+            <b>Name: </b>Enter a name for the disease. Max 22 characters.
             <div id=popup-arrow></div>
           </div>
           <div id="infRate-popup" class="popup-style">
@@ -134,6 +135,7 @@
     </div>
 
     <div id="week-counter">Week: 0</div>
+    <div id="disease-name-label">N/A</div>
 
     <div id="graph-placeholder"></div>
 
