--- a/css/simulatorStyle.css
+++ b/css/simulatorStyle.css
@@ -42,7 +42,25 @@
 	font-size: 0.8rem;
 	color: var(--text);
 	text-decoration: none;
-	padding-top: 0.75em;
+	padding-top: 1em;
+	padding-right: 85em;
+}
+header {
+	--text: #f4f4f4;
+	--text-inverse: #333;
+	--background: transparent;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 999;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 2em 3em 2em 5em;
+	transition: background 250ms ease-in;
+	background: var(--background);
+	color: var(--text);
 }
 .nav__list {
 	position: absolute;
@@ -434,7 +452,7 @@
 	margin-bottom: 15px;
 	font-weight: bold;
 	font-size: 30px;
-	margin-left: 450px;
+	margin-left: 400px;
 	opacity: .8;
 	font-family: 'Raleway', sans-serif;
 }
@@ -453,7 +471,7 @@
 	text-align: right;
 	font-size: 20px;
 	list-style: none;
-	margin-left: 185px;
+	margin-left: 150px;
 	font-family: 'Raleway', sans-serif;
 }
 .my-legend ul.legend-labels li span {
