--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -3,31 +3,9 @@ body {
 	overflow-x: hidden;
 	padding: 0px;
 	margin: 0px;
+	color: black;
 }
-.special-link-format {
-	position: relative;
-	font-family: "Roboto", sans-serif;
-	font-size: 11px;
-	text-transform: uppercase;
-	letter-spacing: 1.5px;
-	background-color: #1f2020;
-	border: 1px solid #333333;
-	border-radius: 3px;
-	color: #f5f5f5;
-	padding: 5px;
-	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-	transition: all 0.3s ease 0s;
-	cursor: pointer;
-	outline: none;
-}
-.special-link-format:hover {
-	background-color: #313333;
-	border-radius: 3px;
-	text-decoration: none;
-	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
-	color: #fff;
-	transform: translateY(-7px);
-}
+
 a {
 	text-decoration: none;
 }
@@ -41,36 +19,10 @@ p a:hover {
 	color: grey;
 	text-decoration: underline;
 }
-#banner-homepage {
-	position: relative;
-	color: white;
-	width: 100%;
-	height: 300px;
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	align-content: center;
-	flex-direction: column;
-	background-image: url("../images/virus-banner.jpg");
-	background-size: 100% 100%;
-	padding: 31vh 0;
-	z-index: 3;
-}
-@media (max-width: 1500px) {
-	#banner-homepage {
-		background-size: 1500px 100%;
-		background-blend-mode: multiply;
-	}
-	.wide-image {
-		width: 1175px;
-		margin-left: 75px;
-		margin-right: 75px;
-	}
-}
+
 .site-logo {
 	font-weight: 900;
 	font-size: 0.8rem;
-	color: var(--text);
 	text-decoration: none;
 	transition: color 0.4s;
 }
@@ -81,8 +33,8 @@ p a:hover {
 header {
 	--text: #f4f4f4;
 	--text-inverse: #333;
-	--background: transparent;
-	position: fixed;
+	background-image: url("../images/virus-banner.jpg");
+	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
@@ -92,7 +44,6 @@ header {
 	align-items: center;
 	padding: 2em 3em 2em 3em;
 	transition: background 250ms ease-in;
-	background: var(--background);
 	color: var(--text);
 }
 .main-nav {
@@ -182,39 +133,7 @@ header {
 	box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
 }
 
-#title {
-	font-size: 60px;
-	font-weight: 700;
-	padding-top: 15px;
-}
-#title-names {
-	font-size: 18px;
-	color: lightgrey;
-}
-.shortcut-text {
-	position: relative;
-	top: 6px;
-}
-.shortcut-icon {
-	float: right;
-	position: relative;
-	left: 3px;
-	bottom: 10px;
-}
-#simulator-shortcut {
-	position: fixed;
-	width: 100px;
-	height: 25px;
-	right: 0px;
-	z-index: 1;
-}
-#top-shortcut {
-	float: right;
-	top: 35px;
-	width: 50px;
-	height: 25px;
-}
-#disease-header {
+#about-header {
 	text-align: center;
 	font-family: "Bitter", serif;
 	line-height: 54px;
@@ -222,24 +141,44 @@ header {
 	color: rgba(0, 0, 0, 0.95);
 	font-size: 32px;
 	font-weight: normal;
+	padding-top: 1em;
 }
-.covid {
-	text-align: center;
-	font-size: 24px;
-	font-weight: 300;
+
+.masthead {
+	/* Layout Declarations */
+	color: #212121;
+	/* Typography Declarations */
+	font-family: 'Times New Roman', Times, serif;
+	font-weight: bold;
+	font-size: 4em;
+	letter-spacing: -0.01em;
+	text-transform: uppercase;
 }
-.bubonic-plague {
-	text-align: center;
-	font-size: 24px;
-	font-weight: 300;
-}
-.disease-text {
+
+.about-text_right {
 	color: #313333;
-	margin-left: 75px;
-	margin-right: 100px;
+	margin-left: 0px;
+	margin-right: 160px;
 	text-align: center;
 	font-size: 18px;
 	font-weight: 300;
+}
+
+.about-text_left {
+	color: #313333;
+	margin-left: 180px;
+	margin-right: 75px;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 300;
+}
+
+.about-text_center {
+	color: #313333;
+	text-align: center;
+	font-size: 18px;
+	font-weight: 300;
+	margin-bottom: 5em;
 }
 
 .fade-in {
@@ -266,46 +205,19 @@ header {
 	opacity: 1;
 }
 
-#simulator-heading {
-	margin-top: 55px;
-	text-align: center;
-}
-#screenshot {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 50%;
-	border: 2px solid black;
-}
-#simulator-page-link {
-	display: block;
-	width: 163px;
-	height: 28px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 10px;
-}
-#simulator-page-link-icon {
-	display: inline-block;
-	position: relative;
-	top: 3px;
-	left: 8px;
-}
-#simulator-page-link-text {
-	display: inline-block;
-	position: relative;
-	left: 5px;
-	bottom: 3px;
-}
-#footer-banner {
-	background-color: rgb(19, 19, 19);
-	color: white;
-	width: 100%;
-	height: 75px;
-	flex-direction: column;
-	margin-top: 75px;
-}
-#sources {
-	padding: 5px;
-	color: lightgrey;
+@media (max-width: 1500px) {
+	.portrait_left {
+		width: 400px;
+		height: 400px;
+		margin-left: 180px;
+		margin-right: 75px;
+	}
+
+	.portrait_right {
+		margin-top: 1em;
+		width: 400px;
+		height: 400px;
+		margin-left: 75px;
+		margin-right: 180px;
+	}
 }
