--- a/views/homepage.html
+++ b/views/homepage.html
@@ -24,7 +24,7 @@
                         <a href="Simulation" class="nav__link">Simulation</a>
                     </li>
                     <li class="nav__list-item">
-                        <a href="#" class="nav__link">About us</a>
+                        <a href="About" class="nav__link">About</a>
                     </li>
                     <li class="nav__list-item">
                         <a href="https://www.givedirectly.org/covid-19/us/" target="_blank" class ="nav__link">COVID Relief Fund</a>
