--- a/views/about.html
+++ b/views/about.html
@@ -57,7 +57,7 @@
             coding and computers and throughout his studies at UNT, he has remained a crutch for his classmates with his coding and problem solving knowledge.
             
         </p>
-        <p>Ty Rozell is this project's Full Stack Developer with deep knowledge of Javascript, HTML, and CSS. Ty delivered on the 
+        <p> Ty Rozell is this project's Full Stack Developer with deep knowledge of Javascript, HTML, and CSS. Ty delivered on the 
             simulation page with multiple javascript files communicating with each other, and with the back-end server. 
             It took Ty very little time to start working hard and having the simulation up in no time. This project started on Monday June 22, 2020.
             Since the page's debut, Ty has always been striving for the map, drop down menu, and simulaton logic, to be in perfect condition. His skills
@@ -65,7 +65,12 @@
             <br>
         </p>
 
+        <a id="linkedin" class="special-link-format" href="https://www.linkedin.com/in/ty-rozell-00475b1a1/"
+            target="_blank">Connect
+            with Ty</a>
+
     </div>
+    
     <!--Breaks in order to use spacing to highlight programmers-->
     <br>
     <br>
@@ -75,8 +80,8 @@
     <div class="about-text_left">
         <h1 class="portrait_header">Senior Back End Developer</h1>
         <p>
-            Clint Wyatt is a Graduate from University of North Texas (UNT), having studied in Computer Science, and plans on obtaining
-            another degree in the year 2021. Clint has always been on the top of the knowledge chain and ahead of his peers, making his 
+            Clint Wyatt is a graduate with a BA from SMU and a MA from University of Minnesota, having studied in Trombone Performance, and plans on obtaining
+            a Computer Science degree from University of North Texas (UNT) in the year 2021. Clint has always been on the top of the knowledge chain and ahead of his peers, making his 
             school career fly by with top teir grades. 
     
         </p>
@@ -86,6 +91,8 @@
             <br>
         </p>
     
+        <a id="linkedin" class="special-link-format" href="https://www.linkedin.com/in/clint-wyatt/"
+            target="_blank">Connect with Clint</a>
     </div>
 
     <!--Breaks in order to use spacing to highlight programmers-->
@@ -112,6 +119,8 @@
             <br>
         </p>
     
+        <a id="linkedin" class="special-link-format" href="https://www.linkedin.com/in/ryanschick" target="_blank">Connect
+            with Ryan</a>
     </div>
 
     <!--Breaks in order to use spacing to highlight programmers-->
