--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -6,6 +6,31 @@ body {
 	color: black;
 }
 
+.special-link-format {
+	position: relative;
+	font-family: "Roboto", sans-serif;
+	font-size: 11px;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+	background-color: #1f2020;
+	border: 1px solid #333333;
+	border-radius: 3px;
+	color: #f5f5f5;
+	padding: 5px;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
+}
+.special-link-format:hover {
+	background-color: #313333;
+	border-radius: 3px;
+	text-decoration: none;
+	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
+	color: #fff;
+	transform: translateY(-7px);
+}
+
 a {
 	text-decoration: none;
 }
