Finished about programmers section

--- a/views/about.html
+++ b/views/about.html
@@ -54,12 +54,12 @@
         <h1 class = "portrait_header">Senior Full Stack Developer</h1>
         <p>
             Ty Rozell is a senior at University of North Texas (UNT), studying in Computer Science, and plans on graduating in the year 2021. Ty has always found a love for 
-            coding and computers and throughout his studies at UNT, he has remained a crutch for his classmates with his coding and problem solving knowledge.
+            coding and computers and throughout his studies at UNT, has remained a crutch for his classmates with his coding and problem solving knowledge.
             
         </p>
         <p> Ty Rozell is this project's Full Stack Developer with deep knowledge of Javascript, HTML, and CSS. Ty delivered on the 
             simulation page with multiple javascript files communicating with each other, and with the back-end server. 
-            It took Ty very little time to start working hard and having the simulation up in no time. This project started on Monday June 22, 2020.
+            It took Ty very little time to start working hard and having the simulation. This project started on Monday June 22, 2020.
             Since the page's debut, Ty has always been striving for the map, drop down menu, and simulaton logic, to be in perfect condition. His skills
             were used in every area in the Project Outbreak website and set the foundation for the homepage and helped the team in everyway he could.
             <br>
@@ -87,7 +87,9 @@
         </p>
         <p>Clint Wyatt is this project's Senior Back End Developer with deep knowledge of Javascript, NodeJS, ExpressJS and MySQL.
               Clint packaged together all the back end databases and handled the inner workings of the login and registration.  
-              Fill in more
+              With his knowledge, Clint handled the entirety of the back end development and has made the website have a means of 
+              saving and identifying users through their information. Clint created a custom experience for each user after putting a 
+              tremendous time and effort over the month and a half this project was constructed.
             <br>
         </p>
     
@@ -105,7 +107,7 @@
     <br>
 
     <img class="portrait_left" src="../images/ryan_schick.jpg" width="400" height="400"
-        alt="picture of ty rozell, simulator and javascript manager" align="left">
+        alt="picture of ryan schick, homepage and design manager" align="left">
     <div class="about-text_right">
         <h1 class="portrait_header">Senior Front End Developer</h1>
         <p>
@@ -115,8 +117,11 @@
             commit to in 2018 when he started is academic career at Collin College.
     
         </p>
-        <p>Add more
-            <br>
+        <p>
+            Ryan Schick is this project's Senior Front End Developer with deep knowledge of Javascript, CSS, and HTML. Ryan carried the aesthetic design 
+            throughout the website design, especially the home and about webpages. With a keen eye for design and properly putting together lettering, size, flow, 
+            and color, he was able to have the website come together. Ryan was able to take feedback from a test group to fully turn around the design and also 
+            use web scrapping to give live updates and news for the COVID-19 outbreak, the primary reason for the team to start this project.
         </p>
     
         <a id="linkedin" class="special-link-format" href="https://www.linkedin.com/in/ryanschick" target="_blank">Connect
@@ -125,12 +130,7 @@
 
     <!--Breaks in order to use spacing to highlight programmers-->
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
 
     <div id="about-header">
         <h1 class="masthead">The Project</h1>
