--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -236,6 +236,7 @@ header {
 		height: 400px;
 		margin-left: 180px;
 		margin-right: 75px;
+		margin-bottom: 65px;
 	}
 
 	.portrait_right {
@@ -244,5 +245,6 @@ header {
 		height: 400px;
 		margin-left: 75px;
 		margin-right: 180px;
+		margin-bottom: 35px;
 	}
 }
