Finished about page

--- a/views/about.html
+++ b/views/about.html
@@ -72,9 +72,7 @@
     </div>
     
     <!--Breaks in order to use spacing to highlight programmers-->
-    <br>
-    <br>
-    <br>
+
 
     <img class="portrait_right" src="../images/clint_wyatt.jpg" width = "400" height="400" alt="picture of clint wyatt, back-end database manager" align = "right">
     <div class="about-text_left">
@@ -98,13 +96,6 @@
     </div>
 
     <!--Breaks in order to use spacing to highlight programmers-->
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
 
     <img class="portrait_left" src="../images/ryan_schick.jpg" width="400" height="400"
         alt="picture of ryan schick, homepage and design manager" align="left">
@@ -129,19 +120,43 @@
     </div>
 
     <!--Breaks in order to use spacing to highlight programmers-->
-    <br>
-
 
     <div id="about-header">
         <h1 class="masthead">The Project</h1>
     </div>
-
+    <img id="headline_collage" class="wide-image" src="../images/pandemic_collage.jpg" width="100%" height="400"
+        alt="headline collage of coronavirus">
     <div class="about-text_center">
+       
         <p> 
-            add some of what the project is. what it means for us. why its important 
-            for today's time
+            Project Outbreak was founded by Ty Rozell, Clint Wyatt, and Ryan Schick and coined by Clint on Monday July 22, 2020. The web application came to life 
+            on June 30, 2020 when the first homepage design was created. During the time of it's creation, Project Outbreak was specially cared for as it was crafted 
+            during the COVID-19 outbreak pandemic of 2020 which was first reported in Wuhan City, China in December 2019, and wasn't a global concern until
+            March 2020. COVID-19 sparked concern from the World Health Organization (WHO) and Center of Disease Control (CDC) which caused the global shutdown of travel 
+            and many businesses. Countries around the world took different approaches to combatting the spread of Coronavirus, some were more successful than others.
+            The United States had the worse response to the virus with economic failures, late testing, and no health requirements to help citizens and in turn, became the most
+            infected country in the world. The issues concerning coronavirus became a more political matter, rather than a health issue, and seperated the nation on opinions.
+        </p>
+
+        <p>
+            This caused concern within the founding group of Project Outbreak and decided to dedicate their junior year project 
+            to bringing awareness to diseases and COVID-19 information. The team saw that the public is better informed and together, 
+            but also saw the need to have an engaging and fun representation of the spread of diseases. So, the implementation of "The Simulator"
+            was introduced on Wednesday July 1st, 2020. This oppurtunity shifted the focus of the website to be more appealing visually, but also
+            enhance the overall user experience to allow custom diseases to be created with the 4 most used characteristics to describe any disease.
+            This adaptation created a whole new set of challenges as the team had, and has, never offically met in-person. This project was completely
+            implemented remotely through using discord, github and live file editing. This project is a testimate that nothing can stop people from coming
+            together to create and carefully construct projects for a greater good.
+        </p>
+
+        <p>
+            Thus, after 6 weeks and a lot of quality time of getting to make freinds, Project Outbreak was born.
         </p>
     </div>
+    <a id="top-shortcut" class="special-link-format" href="#top-of-page">
+        <div class="shortcut-text">Top</div>
+        <i class="shortcut-icon gg-push-chevron-up"></i>
+    </a>
     <!--javascript file for fading scroll effect-->
     <script src="../scripts/scrollEffect.js"></script>
     <script src="../scripts/welcomeMessage.js"></script>
