--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -181,29 +181,36 @@ header {
 }
 
 .about-text_right {
+	font-family: 'Raleway', sans-serif;
 	color: #313333;
 	margin-left: 0px;
-	margin-right: 160px;
+	margin-right: 180px;
 	text-align: center;
 	font-size: 18px;
 	font-weight: 300;
+	margin-bottom: 75px;
 }
 
 .about-text_left {
+	font-family: 'Raleway', sans-serif;
 	color: #313333;
 	margin-left: 180px;
 	margin-right: 75px;
 	text-align: center;
 	font-size: 18px;
 	font-weight: 300;
+	margin-bottom: 75px;
 }
 
 .about-text_center {
+	font-family: 'Raleway', sans-serif;
 	color: #313333;
 	text-align: center;
 	font-size: 18px;
-	font-weight: 300;
-	margin-bottom: 5em;
+	font-weight: 500;
+	margin-bottom: 5px;
+	margin-left: 150px;
+	margin-right: 150px;
 }
 
 .fade-in {
@@ -236,7 +243,7 @@ header {
 		height: 400px;
 		margin-left: 180px;
 		margin-right: 75px;
-		margin-bottom: 65px;
+		margin-bottom: 75px;
 	}
 
 	.portrait_right {
@@ -245,6 +252,22 @@ header {
 		height: 400px;
 		margin-left: 75px;
 		margin-right: 180px;
-		margin-bottom: 35px;
+		margin-bottom: 85px;
 	}
+
+	.wide-image {
+		width: 1175px;
+		height: 600px;
+		margin-left: 75px;
+		margin-right: 75px;
+		margin-bottom: 10px;
+	}
+}
+
+#top-shortcut {
+	float: right;
+	top: 35px;
+	width: 50px;
+	height: 25px;
+	margin-bottom: 10px;
 }
