Fixed some wording of The Project section

--- a/views/about.html
+++ b/views/about.html
@@ -131,7 +131,7 @@
         <p> 
             Project Outbreak was founded by Ty Rozell, Clint Wyatt, and Ryan Schick and coined by Clint on Monday July 22, 2020. The web application came to life 
             on June 30, 2020 when the first homepage design was created. During the time of it's creation, Project Outbreak was specially cared for as it was crafted 
-            during the COVID-19 outbreak pandemic of 2020 which was first reported in Wuhan City, China in December 2019, and wasn't a global concern until
+            during the COVID-19 outbreak pandemic of 2020, which was first reported in Wuhan City, China in December 2019, and wasn't a global concern until
             March 2020. COVID-19 sparked concern from the World Health Organization (WHO) and Center of Disease Control (CDC) which caused the global shutdown of travel 
             and many businesses. Countries around the world took different approaches to combatting the spread of Coronavirus, some were more successful than others.
             The United States had the worse response to the virus with economic failures, late testing, and no health requirements to help citizens and in turn, became the most
@@ -140,10 +140,10 @@
 
         <p>
             This caused concern within the founding group of Project Outbreak and decided to dedicate their junior year project 
-            to bringing awareness to diseases and COVID-19 information. The team saw that the public is better informed and together, 
-            but also saw the need to have an engaging and fun representation of the spread of diseases. So, the implementation of "The Simulator"
+            to bringing awareness to diseases and COVID-19 information. The team saw that the public is better together and informed, 
+            but also saw the need to have an engaging and fun visual representation of the spread of diseases. So, the implementation of "The Simulator"
             was introduced on Wednesday July 1st, 2020. This oppurtunity shifted the focus of the website to be more appealing visually, but also
-            enhance the overall user experience to allow custom diseases to be created with the 4 most used characteristics to describe any disease.
+            enhance the overall user experience to allow custom diseases to be created with the 4 most used characteristics to describe any disease; Infection Rate, Death, Threshold, and Number of Weeks of Infection.
             This adaptation created a whole new set of challenges as the team had, and has, never offically met in-person. This project was completely
             implemented remotely through using discord, github and live file editing. This project is a testimate that nothing can stop people from coming
             together to create and carefully construct projects for a greater good.
