--- a/views/login.html
+++ b/views/login.html
@@ -21,7 +21,7 @@
 			<div id="project-title">Project Outbreak</div>
 		</nav>
 
-		<div class="login-form">
+		<div class="loginform">
 			<h1>Login</h1>
 			<form action="login" method="POST">
 				<input type="text" name="username" placeholder="username" required>
