--- a/views/register.html
+++ b/views/register.html
@@ -21,7 +21,7 @@
 			<div id="project-title">Project Outbreak</div>
 		</nav>
 
-		<div class="login-form">
+		<div class="loginform">
 			<h1>Register</h1>
 			<form action="register" method="POST">
 				<input type="text" name="firstname" placeholder="first name" required>
