--- a/views/register.html
+++ b/views/register.html
@@ -26,8 +26,8 @@
 			<form action="register" method="POST">
 				<input type="text" name="firstname" placeholder="first name" required>
 				<input type="text" name="lastname" placeholder="last name" required>
-				<input type="text" name="username" placeholder="Username" required>
-				<input type="password" name="password" placeholder="Password" required>
+				<input type="text" name="username" placeholder="username" required>
+				<input type="password" name="password" placeholder="password" required>
 				<input type="submit">
 			</form>
 		</div>
