--- a/views/login.html
+++ b/views/login.html
@@ -21,11 +21,11 @@
 			<div id="project-title">Project Outbreak</div>
 		</nav>
 
-		<div class="loginform">
+		<div class="login_register">
 			<h1>Login</h1>
 			<form action="login" method="POST">
-				<input type="text" name="username" placeholder="username" required>
-				<input type="password" name="password" placeholder="password" required>
+				<input type="text" name="username" placeholder="username">
+				<input type="password" name="password" placeholder="password">
 				<input type="submit">
 			</form>
 		</div>
