--- a/views/register.html
+++ b/views/register.html
@@ -21,13 +21,13 @@
 			<div id="project-title">Project Outbreak</div>
 		</nav>
 
-		<div class="loginform">
+		<div class="login_register">
 			<h1>Register</h1>
 			<form action="register" method="POST">
-				<input type="text" name="firstname" placeholder="first name" required>
-				<input type="text" name="lastname" placeholder="last name" required>
-				<input type="text" name="username" placeholder="username" required>
-				<input type="password" name="password" placeholder="password" required>
+				<input type="text" name="firstname" placeholder="first name">
+				<input type="text" name="lastname" placeholder="last name">
+				<input type="text" name="username" placeholder="username">
+				<input type="password" name="password" placeholder="password">
 				<input type="submit">
 			</form>
 		</div>
