--- a/views/about.html
+++ b/views/about.html
@@ -7,10 +7,9 @@
     <!-- adding jquery, and open-source css styels for animation and more functionality-->
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
         crossorigin="anonymous"></script>
-    <link href='../css/homepagestyle.css' rel='stylesheet'>
     <link href='https://css.gg/push-chevron-up.css' rel='stylesheet'>
     <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
-    <meta name="viewport" contents="width=device-width">
+    <meta name=viewport content="initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,900&display=swap" rel="stylesheet" />
     <!-- Inherits some styles from the homepage -->
     <link href="../css/aboutStyle.css" rel="stylesheet">
