--- a/views/about.html
+++ b/views/about.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous"></script>
     <link href='https://css.gg/push-chevron-up.css' rel='stylesheet'>
     <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
-    <meta name=viewport content="initial-scale=1">
+    <meta name="viewport" contents="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,900&display=swap" rel="stylesheet" />
     <!-- Inherits some styles from the homepage -->
     <link href="../css/aboutStyle.css" rel="stylesheet">
