--- a/css/loginRegisterStyle.css
+++ b/css/loginRegisterStyle.css
@@ -48,8 +48,7 @@ body {
 
 .login_register {
   width: 400px;
-  margin-top: 60px;
-  margin: 0 auto;
+  margin: 60px auto;
 }
 
 .login_register input[type="submit"] {
