--- a/css/aboutStyle.css
+++ b/css/aboutStyle.css
@@ -77,7 +77,7 @@ header {
 }
 .main-nav {
 	position: relative;
-	left: 50px;
+	left: 20px;
 }
 .nav__list {
 	list-style: none;
@@ -162,7 +162,12 @@ header {
 	--background: #f4f4f4;
 	box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
 }
-
+#welcome-message {
+	position: absolute;
+	float: right;
+	right: 170px;
+	top: 43px;
+}
 #about-header {
 	text-align: center;
 	font-family: "Bitter", serif;
