--- a/views/homepage.html
+++ b/views/homepage.html
@@ -3,14 +3,12 @@
     <head>
         <title>Project Outbreak | Home</title>
 
-        <!-- adding jquery, and open-source css styels for animation and more functionality-->
-        <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-            crossorigin="anonymous"></script>
+        <!-- adding open-source css icons-->
         <link href='../css/homepagestyle.css' rel='stylesheet'>
         <link href='https://css.gg/push-chevron-up.css' rel='stylesheet'>
         <link href='https://css.gg/arrow-right-o.css' rel='stylesheet'>
-        <meta name="viewport" contents="width=device-width">
         <link href="https://fonts.googleapis.com/css?family=Poppins:300,900&display=swap" rel="stylesheet" />
+        <meta name="viewport" contents="width=device-width">
     </head>
 
     <body> 
