--- a/views/simulator.html
+++ b/views/simulator.html
@@ -18,7 +18,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto+Condensed:wght@300&display=swap"
       rel="stylesheet">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="../scripts/popupBoxes.js"></script>
     <script src="../scripts/createDisease.js"></script>
     <script src="../scripts/loadDisease.js"></script>
@@ -32,11 +31,11 @@
   </head>
   
   <header>
-      <a href="homepage" class="site-logo" aria-label="homepage">Project Outbreak</a>
+    <a href="homepage" class="site-logo" aria-label="homepage">Project Outbreak</a>
   </header>
 
   <body>
-    <!--Menu the slide menu is active, this overlay becomes visible-->
+    <!--When the slide menu is active, this overlay becomes visible-->
     <div id="grey-overlay"></div>
 
     <div id="banner-simulation">
