Added cookie functionality

--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <script src="../scripts/cookieManager.js"></script>
+
     <head>
         <title>Project Outbreak | About</title>
 
