--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <script src="../scripts/cookieManager.js"></script>
+
     <head>
         <title>Project Outbreak | Home</title>
 
@@ -36,7 +38,7 @@
                         <div id="welcome-message">Welcome, ?</div>
                     </li>
                     <li class="nav__list-item">
-                        <a class="nav__link nav__link--btn nav__link--btn--highlight" href="BackToLogin">Logout</a>
+                        <a class="nav__link nav__link--btn nav__link--btn--highlight" href="Logout">Logout</a>
                     </li>
                 </ul>
             </nav>
